--- a/src/styles/elements/modal.scss
+++ b/src/styles/elements/modal.scss
@@ -29,6 +29,8 @@
 			border-radius: 20px;
 			box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
 			cursor: default;
+			max-width: calc(100% - 20px);
+			min-width: 300px;
 			width: 75%;
 
 			.body {
@@ -53,6 +55,9 @@
 				height: 60px;
 				justify-content: center;
 				padding: 0 20px;
+			}
+
+			@media screen and (max-width: 550px) {
 			}
 		}
 	}
